# casino

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml
.github/workflows/: autofix.yml  casino_cards.yml  casino_games.yml  casino_poker.yml  ci.yml  poker.yml  pr-description.yml  rust.yml
crates/cards/: Cargo.toml  README.md
crates/cards/src/: card.rs  deck.rs
crates/casino_cards/: Cargo.toml  README.md
crates/casino_cards/src/: card.rs  deck.rs  hand.rs  lib.rs
crates/casino_games/: Cargo.toml  README.md
crates/casino_games/src/: agents.rs  hand_history.rs  main.rs  persistence.rs  prompts.rs  render.rs  texas_hold_em_game.rs
crates/casino_poker/: Cargo.toml  README.md
crates/casino_poker/benches/: hand_rankings.rs
crates/casino_poker/src/: agent.rs  agents.rs  betting.rs  events.rs  hand_rankings.rs  lib.rs  player.rs  pot.rs
crates/casino_poker/src/games/: texas_hold_em.rs
crates/casino_poker/tests/: downstream_api.rs  hand_rankings_exhaustive.rs
crates/poker/: Cargo.toml  README.md
crates/poker/src/: hand_rankings.rs  lib.rs  player.rs  texas_hold_em.rs
crates/poker/src/games/: texas_hold_em.rs
docs/public-api/: README.md  casino_poker-1.0-review.md  casino_poker-1.0.txt
scripts/: check-casino-poker-public-api.sh
src/: card.rs  deck.rs  game.rs  hand.rs  hand_rankings.rs  hand_values.rs  lib.rs  player.rs
