[package]
name = "cards"
version = "0.1.0"
authors = ["Winston Cooke <contact@winstoncooke.com>"]
edition = "2021"
description = "A library that provides a deck of playing cards that can be used for various card games."
license = "MPL-2.0"
keywords = ["cards", "deck", "poker", "playing", "games"]
categories = ["game-development"]

[dependencies]
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }
