[package]
name = "casino_cards"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
description = "A library that provides a deck of playing cards that can be used for various card games."
authors = ["Winston Cooke <contact@winstoncooke.com>"]
repository = "https://github.com/winstonrc/casino/tree/main/crates/casino_cards"
keywords = ["cards", "deck", "casino", "poker", "playing"]
categories = ["game-development"]

[dependencies]
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }
