[package]
name = "casino_games"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
description = "Play casino games in your terminal."
authors = ["Winston Cooke <contact@winstoncooke.com>"]
repository = "https://github.com/winstonrc/casino/tree/main/crates/casino_games"
keywords = ["casino", "game", "poker", "texas-hold-em", "cards"]
categories = ["games"]

[dependencies]
casino_poker = { version = "1.0", path = "../casino_poker" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "6"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
