[package]
name = "casino_poker"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
description = "A library that provides hand ranking & the backend for poker games."
authors = ["Winston Cooke <contact@winstoncooke.com>"]
repository = "https://github.com/winstonrc/casino/tree/main/crates/casino_poker"
keywords = ["poker", "casino", "texas-hold-em", "cards", "game"]
categories = ["game-development"]

[dependencies]
casino_cards = { version = "1.1", path = "../casino_cards" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1"
