[package]
name = "casino_poker"
version = "2.0.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
description = "A library that provides hand ranking & the backend for poker games."
authors = ["Winston Cooke <contact@winstoncooke.com>"]
repository = "https://github.com/winstonrc/casino/tree/main/crates/casino_poker"
keywords = ["poker", "casino", "texas-hold-em", "cards", "game"]
categories = ["game-development"]

[dependencies]
casino_cards = { version = "2", path = "../casino_cards" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1"
serde_json = "1.0"
