[package]
name = "poker"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A library that provides the backend for playing poker games such as Texas hold 'em."
authors = ["Winston Cooke <contact@winstoncooke.com>"]
repository = "https://github.com/winstonrc/casino/tree/main/crates/poker"
keywords = ["poker", "casino", "texas-hold-em", "cards", "game"]
categories = ["game-development"]

[dependencies]
casino_cards = { path = "../casino_cards" }
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
